# LeetTok

./: .env.example  .eslintrc.js  .gitignore  LICENSE  README.md  app.json  eas.json  package-lock.json  package.json
.cursor/plans/: ai_tutor_assistant.plan.md  codecloze_interactive_challenges.plan.md  launch_and_connect.plan.md  leettok_mobile_app.plan.md  madleets_interactive_challenges.plan.md  mobile_code_editor.plan.md  neetcode_clipping_engine.plan.md  oauth_social_auth.plan.md  recommendation_engine.plan.md
app/: _layout.tsx  challenge-only.tsx  onboarding.tsx
app/(tabs)/: _layout.tsx  bookmarks.tsx  explore.tsx  index.tsx  madleets.tsx  profile.tsx
app/auth/: login.tsx  register.tsx
app/drill/: [topic].tsx
app/problem/: [id].tsx
pipeline/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
pipeline/pipeline/: captions_extract.py  captions_render.py  challenges.py  cli.py  clip.py  code_extract.py  config.py  db.py  discover.py  download.py  log.py  main.py  retry.py  segment.py  transcribe.py  upload.py
scripts/: chop-and-seed.sh
src/components/: CategoryBar.tsx  CodeEditorSheet.tsx  CodeInput.tsx  CodeKeyboardBar.tsx  CodeSymbolBar.tsx  InlineChallenge.tsx  MadLeetsOverlay.tsx  ProblemDescription.tsx  ProgressStats.tsx  QuickActionChips.tsx  TestResults.tsx  TutorMessage.tsx  TutorSheet.tsx  VideoCard.tsx  VideoFeed.tsx
src/constants/: colors.ts  config.ts  sampleChallenges.ts  sampleData.ts  sampleProblems.ts  theme.ts
src/lib/: auth.tsx  codeExecution.ts  embeddings.ts  feed.ts  format.ts  xp.ts  (+16 more)
supabase/: config.toml
(+19 files in other folders)
